<resources>
    <string name="app_name">Sygic Maps</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="start_all">Start downloads</string>
    <string name="cancel_all">Cancel downloads</string>
    <string name="title_activity_settings">Settings</string>
    <string name="duplicatedMaps">More than 2 maps of the same country</string>
    <string name="noMaps">No map found for this country</string>
    <string name="mapDetectUpdate">Last map update : </string>
    <string name="quitMessage">Do you really want to quit this app ?</string>
    <string name="quitTitle">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="sygicMapTitle">Sygic Map</string>
    <string name="code">Code</string>
    <string name="updateGetting">Getting update informations\nPlease wait ...</string>
    <string name="confirmation">Confirmation</string>
    <string name="updateMessage">You have chosen the %s update.\nAre you sure to download it ?</string>
    <string name="download">Download</string>
    <string name="monthPrefSummary">Type a month between 1 and 12\nCurrent start month :</string>
    <string name="yearPrefSummary">Type a year since 2000\nCurrent start year :</string>
    <string name="invalidInput">Invalid input !</string>
    <string name="monthPrefOutBounds">Month out of bounds !</string>
    <string name="yearPrefOutBounds">Year out of bounds !</string>
    <string name="prefUpdateDetectionTitle">Update detection</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="downloadStarting">Starting</string>
    <string name="downloadInitialisation">Initialisation ...</string>
    <string name="updateChoose">Choose update :</string>
    <string name="waiting">Waiting</string>
    <string name="canceled">Canceled</string>
    <string name="downloadCanceled">Download canceled</string>
    <string name="downloadSuccess">Download finished</string>
    <string name="downloadSuccessMessage">The download was completed successfully.\nDo you want to start Sygic ?</string>
    <string name="no">No</string>
    <string name="finished">Successfully completed !</string>
    <string name="unexpectedError">Unexpected Error</string>
    <string name="expectedError">Expected error</string>
    <string name="commonCountries">, common for many countries</string>
    <string name="noConnection">This application needs an Internet connection to work</string>
    <string name="noConnectionTitle">Data Connection</string>
    <string name="wifi">WiFi and Mobile Data</string>
    <string name="mobileData">Data Mobile</string>
    <string name="wifiMobileConnectionMsg">Do you want to use mobile data and wifi or only wifi ?</string>
    <string name="wifiOnly">Only WiFi</string>
    <string name="resetConnection">Reset connection setting</string>
    <string name="doNotAskAgain">Do not ask again</string>
    <string name="countries">Countries</string>
    <string name="useSameCountry">Do you want to use last checked map (%s) ?</string>
    <string name="yes">Yes</string>
    <string name="startSygic">Start Sygic</string>
    <string name="downloadAuto">Download started automatically</string>
    <string name="downloading">Downloading</string>
    <string name="autoDownload">Auto-Download</string>
    <string name="startDownloadAuto">Start the download automatically</string>
    <string name="noDirMap">No Sygic directory found.\nRelaunch this app when you have Sygic installed.</string>
    <string name="pleaseWait">Please, Wait ...</string>
    <string name="dataConnection">Mobile Data</string>
    <string name="curModeData">Current connection mode :</string>
    <string name="dataConnectionTitle">Connection mode</string>
    <string name="noDefined">No defined</string>
    <string name="noConnectionMode">No connection mode have been set</string>
    <string name="downloadFileFrom">Downloading file to</string>
    <string name="startingDownload">Starting download ...</string>
    <string name="updateProgress">Downloaded %1$d Ko / %2$d Ko (%3$d%%)</string>
    <string name="versionName" translatable="false">1.1</string>
    <string name="updateTitle">Update</string>
    <string name="updatePrgramMessage">An update is available ! \nCurrent version : %1$s\nNew version : %2$s\n\nDo you want to download it ?\n\n(Updates are really usefull)</string>
    <string name="applicationPrefTitle">Application</string>
    <string name="curVersion">Current application version : v%s</string>
    <string name="noUpdate">No update</string>
    <string name="noUpdateMessage">No update available !</string>
    <string name="ok">Ok</string>
    <string name="delDoNotAsk">Cancel \"Do no ask again\"</string>
    <string name="noDoNotAskPref">"Do not ask again" is desactivated</string>
    <string name="foundDoNotAskAgainPref">"Do not ask again" is activated</string>
    <string name="desactivate">Desactivate</string>
    <string name="doNotAskMessage">Do you really want to delete the \"Do not ask again\" setting ?</string>

</resources>
